# eodh-qgis

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.html  README.md  README.txt  __init__.py  deploy.py  docker-compose.yml  eodh_qgis.py  eodh_qgis_dialog.py  eodh_qgis_dialog_base.ui  install.sh  metadata.txt  pb_tool.cfg  pyproject.toml  requirements.txt  resources.py  test_suite.py
.docker/: entrypoint.sh  exec.sh  qgis-testing-entrypoint.sh  qgis-testing-prescript.sh  start.sh  stop.sh
.github/: renovate.json
.github/workflows/: ci.yml  release.yml
eodh_qgis/: __init__.py  asset_utils.py  conf.py  crs_utils.py  gdal_config.py  geometry_utils.py  job_widget.ui  kerchunk_utils.py  layer_loader.py  layer_utils.py  main.py  main_dialog.py  main_dialog.ui  settings.py  utils.py  worker.py  workflow_widget.ui
eodh_qgis/api/: __init__.py  client.py  models.py
eodh_qgis/definitions/: __init__.py  asset_types.py  constants.py
eodh_qgis/gui/: __init__.py  collection_details_dialog.py  job_details_widget.py  jobs_widget.py  landing_widget.py  login_dialog.py  main_dialog.py  overview_widget.py  polygon_tool.py  process_widget.py  result_item_card.py  search_widget.py  settings_widget.py  variable_selection_dialog.py  wf_editor_widget.py  wf_executor_widget.py  workflows_widget.py
eodh_qgis/gui/v1/: __init__.py  job_details_widget.py  jobs_widget.py  main_dialog.py  wf_editor_widget.py  wf_executor_widget.py  workflows_widget.py
eodh_qgis/gui/v2/: landing_widget.py  main_dialog.py  overview_widget.py  polygon_tool.py  process_widget.py  search_widget.py
eodh_qgis/test/: __init__.py  test_api_models.py  test_asset_utils.py  test_conf.py  test_crs_utils.py  test_eodh_qgis_dialog.py  test_gdal_config.py  test_geometry_utils.py  test_init.py  test_job_details_widget.py  test_jobs_widget.py  test_kerchunk_utils.py  test_layer_utils.py  test_overview_widget.py  test_resources.py  test_search_widget.py  test_settings.py  test_settings_widget.py  test_stac_client.py  test_utils.py  test_variable_selection_dialog.py  test_wf_executor_widget.py  test_worker.py  test_workflows_widget.py
eodh_qgis/test/data/: example_netcdf_kerchunk.json
eodh_qgis/test/mock/: __init__.py  stac_server.py
eodh_qgis/ui/: collection_details_dialog.ui  job_detail.ui  jobs.ui  landing.ui  login_dialog.ui  main.ui  overview.ui  process.ui  result_item_card.ui  search.ui  settings.ui  wf_editor.ui  wf_executor.ui  workflows.ui
help/source/: conf.py  index.rst
resources/: resources.qrc
scripts/: upload.py
test/: test_eodh_qgis_dialog.py  test_resources.py
