[tool.poetry]
name = "eodh-qgis"
version = "0.0.2"
description = "QGIS plugin for EODH"
authors = ["Dusan Figala <dusan@oxidian.com>"]
license = "BSD 2-Clause"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyeodh = "^0.0.7"
qgis-plugin-ci = "^2.8.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-qgis = "^2.1.0"
pyqt5 = "^5.15.11"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

